--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,6 @@ NEXT_PUBLIC_APP_ID='71e2d53f-dc5d-42f8-ac34-ba5fa87afd49'
 NEXT_PUBLIC_APP_KEY='app-Uo146SCcGmEecbOC1vHdFvdV'
 # API url prefix
 NEXT_PUBLIC_API_URL='https://bot.chatwithgpt.app/v1'
-APP type = 'Agent'
+#APP type = 'Agent'
 # true for workflow apps
 NEXT_PUBLIC_APP_TYPE_WORKFLOW= 'False'
