--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ NEXT_PUBLIC_APP_ID='71e2d53f-dc5d-42f8-ac34-ba5fa87afd49'
 # APP API key
 NEXT_PUBLIC_APP_KEY='app-Uo146SCcGmEecbOC1vHdFvdV'
 # API url prefix
-NEXT_PUBLIC_API_URL='https://bot.chatwithgpt.app/v1'
+NEXT_PUBLIC_API_URL='http://bot.chatwithgpt.app/v1'
 #APP type = 'Agent'
 # true for workflow apps
 NEXT_PUBLIC_APP_TYPE_WORKFLOW= 'False'
